Update hero section background image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     /* Hero Section */
     .hero {
       height: 100vh;
-      background: url('profile.jpg') center/cover no-repeat;
+      background: url('WhatsApp Image 2025-07-22 at 21.44.00.jpeg') center/cover no-repeat;
       display: flex;
       justify-content: center;
       align-items: center;
