--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
       <a href="#profile">Profile</a>
       <a href="#work">Work</a>
       <a href="#education">Education</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -274,6 +275,15 @@
         <p><em>Thesis:</em> Correlation between Somatic Cell Count (SCC) and Extracellular Vesicles in Milk</p>
       </div>
     </section>
+
+<!-- Contact Section -->
+<section id="contact">
+  <h3>Contact</h3>
+  <ul>
+    <li>Email: <a href="mailto:hummeldethz@gmail.com">hummeldethz@gmail.com</a></li>
+    <li>Phone: <a href="tel:+41782197146">+41 78 219 71 46</a></li>
+  </ul>
+</section>
 
     <footer>
       © Dominik Andrin Hummel · CV Website
