--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Dominik Andrin Hummel – CV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Serif font fallback similar to ITC Berkeley Oldstyle -->
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -77,15 +77,18 @@
       z-index: 1;
     }
 
+    /* HERO TITLE — modern font restored */
     .hero h1 {
-      font-size: 22pt;
-      margin: 0 0 0.4rem 0;
+      font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      font-size: 2.4rem;
+      margin: 0 0 0.5rem 0;
       font-weight: 700;
     }
 
     .hero h2 {
-      font-size: 12pt;
-      font-weight: 400;
+      font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      font-size: 1.1rem;
+      font-weight: 500;
       margin: 0;
       color: #f2ede6;
     }
@@ -107,11 +110,11 @@
       margin-bottom: 1.2rem;
     }
 
-    /* Kate-style entries */
+    /* Kate-style entries with extra spacing */
     .entry {
       display: grid;
-      grid-template-columns: 110px 1fr;
-      column-gap: 2rem;
+      grid-template-columns: 140px 1fr;
+      column-gap: 2.5rem;
       margin-bottom: 1.8rem;
     }
 
