--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         physical properties of the solid soil components.
       </p>
       <ul>
-        <li>Field sampling, processing and laboratory analysis for the Swiss National Soil Inventory</li>
+        <li>Field sampling, soil sample processing and laboratory analysis for the Swiss National Soil Inventory</li>
         <li>High-precision geolocation using EMLID Reach GPS</li>
         <li>Geospatial data mapping in R</li>
       </ul>
