--- a/market-garden.html
+++ b/market-garden.html
@@ -76,16 +76,32 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0, 0, 0, 0.25);
+      background: linear-gradient(to bottom, rgba(0,0,0,0.15), rgba(0,0,0,0.45));
     }
 
     .hero h1 {
+      margin: 0 0 0.5rem 0;
+      font-family: 'Montserrat', system-ui, sans-serif;
+      font-size: 2.4rem;
+      font-weight: 600;
+      color: #ffffff;
+      letter-spacing: 0.04em;
+    }
+
+    /* Hero text container */
+    .hero-text {
       position: relative;
       z-index: 1;
-      font-family: 'Montserrat', system-ui, sans-serif;
-      font-size: 2.2rem;
+      max-width: 700px;
+      padding: 1.5rem 2rem;
+      background: none; /* fully transparent */
+    }
+
+    .hero-subtitle {
       margin: 0;
-      color: #ffffff;
+      font-family: "ITC Berkeley Oldstyle", "Libre Baskerville", Georgia, serif;
+      font-size: 10pt;
+      color: #f2f2f2;
       letter-spacing: 0.02em;
     }
 
@@ -146,7 +162,10 @@
 </header>
 
 <div class="hero">
-  <h1>Market Gardening Project</h1>
+  <div class="hero-text">
+    <h1>Market Gardening</h1>
+    <p class="hero-subtitle">Low-input fruit production · agroecological experimentation · Switzerland</p>
+  </div>
 </div>
 
 <div class="page">
@@ -209,13 +228,6 @@
     recognized by GaultMillau, where quality and consistency were essential criteria.
   </p>
 </section>
-
-<section id="gallery">
-  <h2>Selected Impressions</h2>
-  <p>
-    The following images document cultivation setups, plant development, and selected
-    harvest moments throughout the seasons.
-  </p>
 
   <div class="gallery">
     <!-- Replace with your actual images -->
