Enhance descriptions of fruit species and cultivation focus

--- a/market-garden.html
+++ b/market-garden.html
@@ -176,7 +176,8 @@
     I operate a small-scale market gardening project focused on low-input fruit production
     under Swiss climatic conditions. The project combines ecological cultivation principles
     with systematic observation and evaluation, aiming to explore the feasibility of
-    growing selected subtropical fruit species without energy-intensive infrastructure.
+    growing selected subtropical fruit species (e.g. watermelons, sugar melons, eggplants, and peppers)
+    without energy-intensive infrastructure.
   </p>
 </section>
 
@@ -185,7 +186,7 @@
   <p>
     The cultivation system was designed as a mixed planting arrangement, with species and
     varieties deliberately combined to take advantage of allelopathic interactions and
-    microclimatic effects. Rather than optimizing for maximum yield, the focus was placed on
+    microclimatic effects. Rather than optimizing just for maximum yield, the focus was placed on
     fruit quality, resource efficiency, and long-term system stability.
   </p>
 </section>
@@ -215,7 +216,7 @@
   </p>
   <p>
     These observations were used to identify varieties capable of producing high-quality
-    fruit in Switzerland without the need for energy-intensive interventions.
+    fruit in Switzerland without the need for energy-intensive heating or cooling.
   </p>
 </section>
 
