Change hero background image in photography.html

--- a/photography.html
+++ b/photography.html
@@ -62,7 +62,7 @@
     .hero {
       margin-top: var(--header-height);
       height: 55vh;
-      background: url('glacier-hero.jpg') center/cover no-repeat;
+      background: url('000037030021.jpg') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
