--- a/photography.html
+++ b/photography.html
@@ -183,6 +183,7 @@
     <img src="glacier6.jpg" alt="Bernese glacier">
     <img src="glacier7.jpg" alt="Bernese glacier">
     <img src="glacier8.jpg" alt="Bernese glacier">
+    <img src="glacier9.jpg" alt="Bernese glacier">
   </div>
 
   <footer>
