--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 <section>
   <h3>Additional Skills</h3>
   <ul>
-    <li>Spatial data analysis and visualization (R, Q-GIS)</li>
+    <li>Spatial data analysis and visualization (R, Hemisfer, Q-GIS)</li>
     <li>Field instrumentation, sensor networks, GPS surveying</li>
     <li>Project coordination and field logistics</li>
     <li>Militray Disaster Relief; Rescue soldier training (Swiss Armed Forces; KataHI-Bat 104-2)</li>
