Fix typo in project description list

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <ul>
         <li>Management of 68 ecological TreeNet research sites across Switzerland</li>
         <li>Coordination and maintenance of ecosystem sensor networks</li>
-        <li>Technical training/expertise in sensor installation for national and international research projects (TreeNet, ICOS, UPSCALE, FORWARD)</li>
+        <li>Technical training/expertise in sensor installation for national and international research projects (TreeNet, ICOS, UPSCALE, FORWARDS)</li>
         <li>Development of GPS usage standards and internal training</li>
       </ul>
     </div>
