--- a/market-garden.html
+++ b/market-garden.html
@@ -232,9 +232,20 @@
 
   <div class="gallery">
     <!-- Replace with your actual images -->
-    <img src="garden1.jpg" alt="Market garden cultivation setup">
-    <img src="garden2.jpg" alt="Subtropical fruit development">
-    <img src="garden3.jpg" alt="Harvested fruit">
+    <img src="images/garden1.jpg" alt="Market garden cultivation setup">
+    <img src="images/garden2.jpg" alt="Subtropical fruit development">
+    <img src="images/garden3.jpg" alt="Harvested fruit">
+    <img src="images/garden4.jpg" alt="Market garden cultivation setup">
+    <img src="images/garden5.jpg" alt="Subtropical fruit development">
+    <img src="images/garden6.jpg" alt="Harvested fruit">
+    <img src="images/garden7.jpg" alt="Market garden cultivation setup">
+    <img src="images/garden8.jpg" alt="Subtropical fruit development">
+    <img src="images/garden9.jpg" alt="Harvested fruit">
+    <img src="images/garden10.jpg" alt="Market garden cultivation setup">
+    <img src="images/garden11.jpg" alt="Subtropical fruit development">
+    <img src="images/garden12.jpg" alt="Harvested fruit">
+    <img src="images/garden13.jpg" alt="Subtropical fruit development">
+    <img src="images/garden14.jpg" alt="Harvested fruit">
   </div>
 </section>
 
