--- a/market-garden.html
+++ b/market-garden.html
@@ -62,7 +62,7 @@
     .hero {
       margin-top: var(--header-height);
       height: 65vh;
-      background: url('Melone.png') center/cover no-repeat;
+      background: url('garden2.jpg') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
