Update image paths in photography.html

--- a/photography.html
+++ b/photography.html
@@ -62,7 +62,7 @@
     .hero {
       margin-top: var(--header-height);
       height: 55vh;
-      background: url('000037030021.jpg') center/cover no-repeat;
+      background: url('images/000037030021.jpg') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -175,14 +175,14 @@
 
   <div class="gallery">
     <!-- Add as many images as you like -->
-    <img src="glacier1.jpg" alt="Bernese glacier">
-    <img src="glacier2.jpg" alt="Bernese glacier">
-    <img src="glacier4.jpg" alt="Bernese glacier">
-    <img src="glacier5.jpg" alt="Bernese glacier">
-    <img src="glacier6.jpg" alt="Bernese glacier">
-    <img src="glacier7.jpg" alt="Bernese glacier">
-    <img src="glacier8.jpg" alt="Bernese glacier">
-    <img src="glacier9.jpg" alt="Bernese glacier">
+    <img src="images/glacier1.jpg" alt="Bernese glacier">
+    <img src="images/glacier2.jpg" alt="Bernese glacier">
+    <img src="images/glacier4.jpg" alt="Bernese glacier">
+    <img src="images/glacier5.jpg" alt="Bernese glacier">
+    <img src="images/glacier6.jpg" alt="Bernese glacier">
+    <img src="images/glacier7.jpg" alt="Bernese glacier">
+    <img src="images/glacier8.jpg" alt="Bernese glacier">
+    <img src="images/glacier9.jpg" alt="Bernese glacier">
   </div>
 
   <footer>
