--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     .hero {
       height: 100vh;
-      background: url('WhatsApp%20Image%202025-07-22%20at%2021.44.00.jpeg') center/cover no-repeat;
+      background: url('images/WhatsApp%20Image%202025-07-22%20at%2021.44.00.jpeg') center/cover no-repeat;
       position: relative;
       display: flex;
       justify-content: center;
