--- a/market-garden.html
+++ b/market-garden.html
@@ -62,7 +62,7 @@
     .hero {
       margin-top: var(--header-height);
       height: 65vh;
-      background: url('garden2.jpg') center/cover no-repeat;
+      background: url('images/garden2.jpg') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -232,20 +232,20 @@
 
   <div class="gallery">
     <!-- Replace with your actual images -->
-    <img src="images/garden1.jpg" alt="Market garden cultivation setup">
-    <img src="images/garden2.jpg" alt="Subtropical fruit development">
-    <img src="images/garden3.jpg" alt="Harvested fruit">
-    <img src="images/garden4.jpg" alt="Market garden cultivation setup">
-    <img src="images/garden5.jpg" alt="Subtropical fruit development">
-    <img src="images/garden6.jpg" alt="Harvested fruit">
-    <img src="images/garden7.jpg" alt="Market garden cultivation setup">
-    <img src="images/garden8.jpg" alt="Subtropical fruit development">
-    <img src="images/garden9.jpg" alt="Harvested fruit">
-    <img src="images/garden10.jpg" alt="Market garden cultivation setup">
-    <img src="images/garden11.jpg" alt="Subtropical fruit development">
-    <img src="images/garden12.jpg" alt="Harvested fruit">
-    <img src="images/garden13.jpg" alt="Subtropical fruit development">
-    <img src="images/garden14.jpg" alt="Harvested fruit">
+    <img src="images/garden1.jpg" >
+    <img src="images/garden2.jpg" >
+    <img src="images/garden3.jpg" >
+    <img src="images/garden4.jpg" >
+    <img src="images/garden5.jpg" >
+    <img src="images/garden6.jpg" >
+    <img src="images/garden7.jpg" >
+    <img src="images/garden8.jpg" >
+    <img src="images/garden9.jpg" >
+    <img src="images/garden10.jpg" >
+    <img src="images/garden11.jpg" >
+    <img src="images/garden12.jpg" >
+    <img src="images/garden13.jpg" >
+    <img src="images/garden14.jpg" >
   </div>
 </section>
 
