--- a/market-garden.html
+++ b/market-garden.html
@@ -22,7 +22,7 @@
     }
 
     html {
-      scroll-behavior: smooth; /* soft scroll transition */
+      scroll-behavior: smooth;
     }
 
     body {
@@ -94,7 +94,7 @@
       z-index: 1;
       max-width: 700px;
       padding: 1.5rem 2rem;
-      background: none; /* fully transparent */
+      background: none;
     }
 
     .hero-subtitle {
@@ -122,25 +122,32 @@
       margin-bottom: 1rem;
     }
 
-    /* Gallery */
+    /* Masonry-style Gallery */
     .gallery {
-      display: grid;
-      gap: 1.5rem;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      margin-top: 2rem;
+      column-count: 3;
+      column-gap: 1rem;
+      margin-top: 1.5rem;
     }
 
     .gallery img {
       width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 6px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      height: auto;
+      display: block;
+      margin-bottom: 1rem;
+      border-radius: 0;
     }
 
-    .gallery img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    /* Responsive adjustments */
+    @media (max-width: 900px) {
+      .gallery {
+        column-count: 2;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .gallery {
+        column-count: 1;
+      }
     }
 
     /* Footer */
