--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <h3>Profile</h3>
   <p>
     Technician specialist with a Master’s degree in Agricultural Science (Animal Science)
-    and experience in forest and soil ecology, field-based surveys, qualitative as well as qunatitative methods in social science, 
+    and experience in forest and soil ecology, field-based surveys, qualitative as well as quantitative methods in social science, 
     laboratory work, spatial data analysis, and data visualization. Strong interest in
     interdisciplinary environmental and conservation research.
   </p>
